--- a/app/assets/stylesheets/categories_index.css
+++ b/app/assets/stylesheets/categories_index.css
@@ -52,7 +52,7 @@
   
   .categories-container {
 	width: 100%;
-	padding: 1.5rem 0;
+	padding: 1.5rem 1rem;
 	margin: 0;
 	border-bottom: 1px solid #f0f0f0;
 	display: flex;
