--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -1,5 +1,5 @@
 
-<%= form_with(model: @category, local: true, html: { class: "category-form" }) do |form| %>
+<%= form_with(model: category, local: true, html: { class: "category-form" }) do |form| %>
   <div class="field">
     <%= form.label "Category Name" %>
     <%= form.text_field :name %>
