--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,4 +1,5 @@
 <div class = "categories-show-container">
+  
   <div style = "display: flex; justify-content: space-between;">
     <h1><%= @category.name %> <i class="fa-solid fa-folder-open"></i></h1>
     <h1><%= link_to edit_category_path, title: "Edit Category Details", class: "edit-icon" do %>
@@ -20,7 +21,7 @@
           </p> 
           <p style = "font-weight: bold;" title = "due date">
             <i class="fa-solid fa-calendar-days"></i>&nbsp; 
-            <%= task.due_date.strftime("%B %d, %Y") %>
+            <%= task.due_date.strftime("%B %d, %Y") %> <!-- formatted time -->
           </p> 
         </div>
       <% end %>
