--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,6 @@
 
   <%= yield :head %>
 
-  <%# Uncomment if using PWA manifest %>
-  <%#= tag.link rel: "manifest", href: pwa_manifest_path(format: :json) %>
-
   <link rel="icon" href="/icon.png" type="image/png">
   <link rel="icon" href="/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="/icon.png">
@@ -29,7 +26,7 @@
   <header class="header">
     <% if user_signed_in? %>
       <div class="user-info">
-        <h3>Welcome, <%= current_user.email %></h3>
+        <h3>Welcome, <%= current_user.email %></h3> <!-- #.split('@').first -->
         <%= link_to destroy_user_session_path, data: { turbo_method: :delete }, class: "btn" do %>
           <i class="fa-solid fa-power-off"></i>&nbsp;Logout
         <% end %>
