--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,5 +1,5 @@
 <div class = "edit-task-container">
-  <h1>Edit Task</h1>
+  <h1>Edit Task&nbsp; <i class="fa-solid fa-pencil"></i></h1>
     <% if @task.errors.any? %>
       <div id="error_explanation">
         <h2><%= pluralize(@task.errors.count, "error") %> prohibited this task from being saved:</h2>
@@ -10,6 +10,7 @@
         </ul>
       </div>
     <% end %>
+    
   <%= render "form", task: @task %>
   
   <div class = "task-edit-actions">
