--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,5 +1,5 @@
 <div class = "new-task-container">
-  <h1>New Task</h1>
+  <h1>New Task&nbsp;<i class="fa-solid fa-clipboard-check"></i></h1>
     <% if @task.errors.any? %>
       <div id="error_explanation">
         <h2><%= pluralize(@task.errors.count, "error") %> prohibited this task from being saved:</h2>
@@ -10,7 +10,9 @@
         </ul>
       </div>
     <% end %>
+
   <%= render "form", task: @task %>
+  
   <%= link_to session[:return_to] || tasks_path, class: "btn" do %>
     <i class="fa-solid fa-arrow-left"></i> &nbsp; Back
   <%end%>
